@@ -1,5 +1,6 @@
 = 3.2.9 (not released)
-- remove some duplicated conditions with constraints
+- remove duplicated conditions with constraints
+- fix constraints for polymorphic associations
 
 = 3.2.8
 - add deprecation for update_column, update_columns should be used instead
